# 2-uzduotis

./: 2 uzduotis.cbp  2 uzduotis.layout  CMakeLists.txt  Doxyfile  Mylib.h  README.md  Stud.cpp  Stud.h  main.cpp  mynewproject2024.cbp  mynewproject2024.depend  mynewproject2024.layout  studgeneration.cpp
2 uzduotis/: 2 uzduotis.depend  2 uzduotis.layout  Stud.h  main.cpp
html/: _doxygen_documentation_8h_source.html  _mylib_8h_source.html  _stud_8cpp_source.html  _stud_8h_source.html  _zmogus_8cpp_source.html  _zmogus_8h_source.html  annotated.html  class_studentas-members.html  class_studentas.html  class_timer-members.html  class_timer.html  class_zmogus-members.html  class_zmogus.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxygen_crawl.html  files.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  hierarchy.html  index.html  main_8cpp_source.html  md__r_e_a_d_m_e.html  menudata.js  pages.html  studgeneration_8cpp_source.html
html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  functions_5.js  functions_6.js  functions_8.js  pages_0.js  pages_2.js  related_0.js  searchdata.js  variables_1.js
include/: Mylib.h  Stud.h  Zmogus.h
src/: Stud.cpp  Zmogus.cpp  main.cpp  studgeneration.cpp
tests/: test_main.cpp
